--- a/in_memory/clustering/clique_container/BUILD
+++ b/in_memory/clustering/clique_container/BUILD
@@ -1,21 +1,9 @@
-load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
-load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
-load("@com_google_protobuf//bazel:py_proto_library.bzl", "py_proto_library")
+load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
+load("@protobuf//bazel:proto_library.bzl", "proto_library")
+load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
 
-package(default_visibility = ["//visibility:public"])
-
-cc_library(
-    name = "internal",
-    srcs = ["internal.cc"],
-    hdrs = ["internal.h"],
-    deps = [
-        "//in_memory/clustering:config_cc_proto",
-        "//in_memory/clustering:graph",
-        "//in_memory/clustering:types",
-        "//utils/container:fixed_size_priority_queue",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/log:absl_check",
-    ],
+package(
+        default_visibility = ["//visibility:public"],
 )
 
 cc_library(
@@ -23,17 +11,62 @@ cc_library(
     srcs = ["clique_container.cc"],
     hdrs = ["clique_container.h"],
     deps = [
+        ":bitset",
         ":clique_container_cc_proto",
-        ":internal",
-        "//in_memory:status_macros",
+        ":degeneracy_orientation",
+        ":graphs",
         "//in_memory/clustering:config_cc_proto",
+        "//in_memory/clustering:gbbs_graph",
         "//in_memory/clustering:graph",
         "//in_memory/clustering:in_memory_clusterer",
         "//in_memory/clustering:types",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/container:flat_hash_set",
-        "@com_google_absl//absl/log:absl_check",
-        "@com_google_absl//absl/status:statusor",
+        "@abseil-cpp//absl/algorithm:container",
+        "@abseil-cpp//absl/base:nullability",
+        "@abseil-cpp//absl/container:flat_hash_map",
+        "@abseil-cpp//absl/container:flat_hash_set",
+        "@abseil-cpp//absl/functional:any_invocable",
+        "@abseil-cpp//absl/log:absl_check",
+        "@abseil-cpp//absl/log:absl_log",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/types:span",
+    ],
+    alwayslink = True,
+)
+
+cc_library(
+    name = "bitset",
+    hdrs = ["bitset.h"],
+    deps = ["@abseil-cpp//absl/log:absl_check"],
+)
+
+cc_library(
+    name = "degeneracy_orientation",
+    srcs = ["degeneracy_orientation.cc"],
+    hdrs = ["degeneracy_orientation.h"],
+    deps = [
+        ":graphs",
+        "//in_memory/clustering:config_cc_proto",
+        "//in_memory/clustering:gbbs_graph",
+        "//in_memory/clustering:in_memory_clusterer",
+        "//in_memory/clustering:types",
+        "//utils/container:fixed_size_priority_queue",
+        "@abseil-cpp//absl/algorithm:container",
+        "@abseil-cpp//absl/base:nullability",
+        "@abseil-cpp//absl/log:absl_check",
+        "@abseil-cpp//absl/types:span",
+    ],
+)
+
+cc_library(
+    name = "graphs",
+    hdrs = ["graphs.h"],
+    deps = [
+        ":bitset",
+        "//in_memory/clustering:gbbs_graph",
+        "//in_memory/clustering:types",
+        "@abseil-cpp//absl/base:nullability",
+        "@com_github_gbbs//gbbs:bridge",
+        "@com_github_gbbs//gbbs:macros",
     ],
 )
 
