--- a/in_memory/clustering/correlation/BUILD
+++ b/in_memory/clustering/correlation/BUILD
@@ -12,9 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
-load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
-load("@com_google_protobuf//bazel:py_proto_library.bzl", "py_proto_library")
+load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
+load("@protobuf//bazel:proto_library.bzl", "proto_library")
+load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
 
 package(
         default_visibility = ["//visibility:public"],
@@ -27,6 +27,7 @@ cc_library(
     srcs = ["parallel_correlation.cc"],
     hdrs = ["parallel_correlation.h"],
     deps = [
+        ":correlation_cc_proto",
         ":parallel_correlation_util",
         "//in_memory:status_macros",
         "//in_memory/clustering:config_cc_proto",
@@ -36,18 +37,19 @@ cc_library(
         "//in_memory/parallel:parallel_graph_utils",
         "//in_memory/parallel:parallel_sequence_ops",
         "//in_memory/parallel:scheduler",
+        "@abseil-cpp//absl/base:core_headers",
+        "@abseil-cpp//absl/base:nullability",
+        "@abseil-cpp//absl/log:absl_check",
+        "@abseil-cpp//absl/log:absl_log",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
         "@com_github_gbbs//gbbs:bridge",
         "@com_github_gbbs//gbbs:edge_map_data",
         "@com_github_gbbs//gbbs:graph",
         "@com_github_gbbs//gbbs:macros",
         "@com_github_gbbs//gbbs:vertex",
         "@com_github_gbbs//gbbs:vertex_subset",
-        "@com_google_absl//absl/base:core_headers",
-        "@com_google_absl//absl/base:nullability",
-        "@com_google_absl//absl/log:absl_check",
-        "@com_google_absl//absl/log:absl_log",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
+        "@com_github_gbbs//gbbs/helpers:progress_reporting",
         "@parlaylib//parlay:parallel",
         "@parlaylib//parlay:sequence",
     ],
@@ -59,10 +61,13 @@ cc_library(
     srcs = ["correlation_util.cc"],
     hdrs = ["correlation_util.h"],
     deps = [
+        ":correlation_cc_proto",
         "//in_memory/clustering:config_cc_proto",
         "//in_memory/clustering:graph",
         "//in_memory/clustering:in_memory_clusterer",
-        "@com_google_absl//absl/log:absl_check",
+        "//in_memory/clustering:types",
+        "@abseil-cpp//absl/container:flat_hash_map",
+        "@abseil-cpp//absl/log:absl_check",
     ],
 )
 
@@ -71,25 +76,26 @@ cc_library(
     srcs = ["parallel_correlation_util.cc"],
     hdrs = ["parallel_correlation_util.h"],
     deps = [
+        ":correlation_cc_proto",
         ":correlation_util",
         "//in_memory/clustering:config_cc_proto",
         "//in_memory/clustering:in_memory_clusterer",
         "//in_memory/clustering:types",
         "//in_memory/parallel:parallel_graph_utils",
         "//in_memory/parallel:parallel_sequence_ops",
+        "@abseil-cpp//absl/base:core_headers",
+        "@abseil-cpp//absl/container:flat_hash_map",
+        "@abseil-cpp//absl/flags:flag",
+        "@abseil-cpp//absl/log",
+        "@abseil-cpp//absl/log:absl_check",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/types:span",
         "@com_github_gbbs//gbbs:bridge",
         "@com_github_gbbs//gbbs:graph",
         "@com_github_gbbs//gbbs:macros",
         "@com_github_gbbs//gbbs:vertex",
-        "@com_google_absl//absl/base:core_headers",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/flags:flag",
-        "@com_google_absl//absl/log:absl_check",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/types:optional",
-        "@com_google_absl//absl/types:span",
         "@parlaylib//parlay:delayed_sequence",
         "@parlaylib//parlay:monoid",
         "@parlaylib//parlay:parallel",
@@ -128,14 +134,15 @@ cc_library(
         "//in_memory/clustering:types",
         "//in_memory/parallel:parallel_sequence_ops",
         "//in_memory/parallel:scheduler",
+        "@abseil-cpp//absl/base:core_headers",
+        "@abseil-cpp//absl/base:nullability",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings:str_format",
         "@com_github_gbbs//gbbs:graph",
         "@com_github_gbbs//gbbs:macros",
         "@com_github_gbbs//gbbs:vertex",
-        "@com_google_absl//absl/base:core_headers",
-        "@com_google_absl//absl/base:nullability",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings:str_format",
+        "@com_github_gbbs//gbbs/helpers:progress_reporting",
         "@parlaylib//parlay:parallel",
     ],
     alwayslink = 1,
@@ -157,11 +164,13 @@ cc_library(
     srcs = ["quick_cluster.cc"],
     hdrs = ["quick_cluster.h"],
     deps = [
+        ":correlation_cc_proto",
         "//in_memory/clustering:config_cc_proto",
         "//in_memory/clustering:graph",
         "//in_memory/clustering:types",
-        "@com_google_absl//absl/functional:function_ref",
-        "@com_google_absl//absl/random",
-        "@com_google_absl//absl/random:bit_gen_ref",
+        "@abseil-cpp//absl/functional:function_ref",
+        "@abseil-cpp//absl/log:absl_check",
+        "@abseil-cpp//absl/random",
+        "@abseil-cpp//absl/random:bit_gen_ref",
     ],
 )
