--- a/utils/container/BUILD
+++ b/utils/container/BUILD
@@ -15,9 +15,9 @@
 # This directory contains generic utilities for manipulating containers.
 # No dependencies to research_graph code are allowed.
 
-load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
-load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
-load("@com_google_protobuf//bazel:py_proto_library.bzl", "py_proto_library")
+load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
+load("@protobuf//bazel:proto_library.bzl", "proto_library")
+load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
 
 package(
     default_visibility = ["//visibility:public"],
@@ -29,6 +29,6 @@ cc_library(
     name = "fixed_size_priority_queue",
     hdrs = ["fixed_size_priority_queue.h"],
     deps = [
-        "@com_google_absl//absl/log:absl_check",
+        "@abseil-cpp//absl/log:absl_check",
     ],
 )
