--- a/in_memory/shortest_paths/BUILD
+++ b/in_memory/shortest_paths/BUILD
@@ -12,9 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
-load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
-load("@com_google_protobuf//bazel:py_proto_library.bzl", "py_proto_library")
+load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
+load("@protobuf//bazel:proto_library.bzl", "proto_library")
+load("@protobuf//bazel:py_proto_library.bzl", "py_proto_library")
 
 package(
         default_visibility = ["//visibility:public"],
@@ -24,15 +24,13 @@ licenses(["notice"])
 
 cc_library(
     name = "dijkstra",
-    srcs = ["dijkstra.cc"],
     hdrs = ["dijkstra.h"],
     deps = [
         "//in_memory:status_macros",
-        "//in_memory/clustering:gbbs_graph",
         "//in_memory/clustering:types",
         "//utils/container:fixed_size_priority_queue",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/status:statusor",
-        "@com_google_absl//absl/strings",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/status:statusor",
+        "@abseil-cpp//absl/strings",
     ],
 )
